# Spam-Rectifier

./: .gitignore  README.md  pyproject.toml
data/: sample.csv
src/spamrectifier/: __init__.py  api.py  cli.py  data.py  features.py  model.py  monitoring.py  preview.py  reporting.py
tests/: test_explain.py  test_model.py  test_monitoring.py
