[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spamrectifier"
version = "0.1.0"
description = "Practical spam detection toolkit with CLI, evaluation, and model persistence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SpamRectifier" }]
license = { text = "MIT" }
keywords = ["spam", "nlp", "classifier", "naive-bayes"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.6"]

[project.scripts]
spamrectifier = "spamrectifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
